--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "nedb": "^1.8.0",
     "puppeteer": "^5.1.0",
+    "sanitize-filename": "^1.6.3",
     "serialize-error": "^7.0.1"
   },
   "devDependencies": {
